--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /[Bb]uild/
 /[Bb]uilds/
 /Assets/AssetStoreTools*
+/Assets/Sandbox
+/Assets/Sandbox.meta
 
 # Visual Studio 2015 cache directory
 /.vs/
